--- a/watch.html
+++ b/watch.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>watch</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <nav class="navbar">
       <h2>Pick <span>NEWS</span></h2>
-      <ul></ul>
+      <ul>
+        <a href="">Home</a>
+        <a href="">Latest News</a>
+      </ul>
+      <div class="">
+        <a class="subscribe" href="">Subscribe</a>
+      </div>
     </nav>
   </body>
 </html>
