--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a class="subscribe" href="">Subscribe</a>
       </div>
     </nav>
-
+    <!-- updates  -->
     <!-- MAIN CONENT -->
     <main></main>
   </body>
